order summary design

--- a/checkout.html
+++ b/checkout.html
@@ -157,8 +157,8 @@
                 <button class="voucher-btn">Apply</button>
             </div>
             <div class="total-items-cost">
-                <div class="total-items">Total</div>
-                <div class="total-cost">203</div>
+                <div class="total-price">Total</div>
+                <div class="total-cost">$203</div>
             </div>
             <button class="place-order-btn">PROCEED TO CHECKOUT</button>
         </div>
