start build product preview page

--- a/checkout-page.html
+++ b/checkout-page.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/logo.png" type="x-icon">
+    <link rel="stylesheet" href="style/Home-page.css">
     <link rel="stylesheet" href="style/checkout.css">
-    <title>Document</title>
+    <title>Checkout</title>
 </head>
 <body>
 
@@ -185,6 +187,7 @@
     
 
     <script type="module" src="script/checkout.js"></script>
+    <script type="module" src="script/cart.js"></script>
     <script src="https://kit.fontawesome.com/4bacff8f96.js" crossorigin="anonymous"></script>
 </body>
 </html>
