rename Home-page.html to index.html for deployment

--- a/checkout-page.html
+++ b/checkout-page.html
@@ -47,7 +47,7 @@
 
         <div class="header">
 
-            <a href="Home-page.html" class="logo" ><img src="images/logo.png" alt="">
+            <a href="index.html" class="logo" ><img src="images/logo.png" alt="">
                 <h1>Ecart Mart</h1>
             </a>
             
