--- a/Product-preview.html
+++ b/Product-preview.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/logo.png" type="x-icon">
     <link rel="stylesheet" href="style/Product-preview.css">
-    <title>Document</title>
+    <title>Product Preview</title>
 </head>
 <body>
     
@@ -46,7 +46,7 @@
 
         <div class="header">
 
-            <a href="Home-page.html" class="logo" ><img src="images/logo.png" alt="">
+            <a href="index.html" class="logo" ><img src="images/logo.png" alt="">
                 <h1>Ecart Mart</h1>
             </a>
             
