add related products section  on preview page

--- a/Product-preview.html
+++ b/Product-preview.html
@@ -167,6 +167,41 @@
 
           -->
 
+        
+
+    </section>
+
+<!--Related Product Section-->
+    <section class="related-product-container">
+
+        <h1 class="related-product-header">Related Products</h1>
+
+        <div class="related-products">
+<!--
+        <div class="related-products-item">
+
+                <div class="related-products-photo">
+                    <img src="images/protuct image/pexels-pixabay-277390.jpg" alt="">
+                </div>
+                <div class="related-products-name">
+                    2NRB50 Led Square shape led watch for men Black
+                </div>
+                <div class="related-products-price">
+                    20.50
+                </div>
+                <div class="related-products-rating">
+                    <img src="images/rating-4.png" alt="">
+                </div>
+                <div class="addToCart-btn">
+                    <div class="addCart-btn">
+                    <button class="add-btn">Add Cart</button>
+                </div>
+                <div class="added-btn" > </div>   
+                </div>
+
+            </div> 
+-->
+             
         </div>
 
     </section>
