--- a/checkout-page.html
+++ b/checkout-page.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/logo.png" type="x-icon">
-    <link rel="stylesheet" href="style/Home-page.css">
+    <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/checkout.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <title>Checkout</title>
 </head>
 <body>
@@ -52,8 +55,8 @@
             </a>
             
          <div class="scerchbar">
-                <input type="text" placeholder="Search Product.." name="search">
-                <button type="submit"><i class="fa fa-search"></i>
+                <input class="user-input" type="text" placeholder="Search Product.." name="search">
+                <button class="search-btn" type="submit"><i class="fa fa-search"></i>
                 </button>
          </div>
 
