adding navigation button

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 -->
         </div>
         <div class="navigation-button">
-            <button class="see-more-btn">See More</button>
+            <button class="seeMore-btn">See More</button>
         </div>
 
         <div class="see-more"></div>
