--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/logo.png" type="x-icon">
     <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/Home-page.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -162,7 +163,7 @@
 
 
         <!-- Product items start form here -->
-             <h2>Just For You</h2>
+             <h2 class="just-for-you">Just For You</h2>
         <div class="product-container">
             
 
@@ -193,10 +194,11 @@
 -->
         </div>
         <div class="navigation-button">
-            <button class="seeMore-btn">See More</button>
+            <button class="seeMore-btn">LOAD MORE</button>
         </div>
+        <footer class="footer-container">footer</footer>
 
-        <div class="see-more"></div>
+      
 
 
 
