--- a/search-product.html
+++ b/search-product.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/logo.png" type="x-icon">
     <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/search-product.css">
     <link rel="stylesheet" href="style/products.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -195,6 +196,8 @@
             </div>
         </div>
     </section>
+
+    
 
 </div>
 
