added product sort by price at search product page

--- a/search-product.html
+++ b/search-product.html
@@ -182,11 +182,11 @@
                 <div class="selete-filter">
                     <label >Sort by:</label>
                     <select id="sort-list">
-                      <option value="volvo">Best Match</option>
-                      <option value="saab">Top Sell</option>
-                      <option value="opel">New Arrivals</option>
-                      <option value="audi">Low To hight</option>
-                      <option value="audi">Hight To Low</option>
+                      <option value="Best Match">Best Match</option>
+                      <option value="Top Sell">Top Sell</option>
+                      <option value="New Arrivals">New Arrivals</option>
+                      <option value="Low To high">Price Low To hight</option>
+                      <option value="High To Low">Price Hight To Low</option>
                     </select>
                 </div>
            
