add deals product and rating image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/logo.png" type="x-icon">
     <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/products.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/Home-page.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -160,7 +161,22 @@
 
              </div> 
 
+  <!--fashion-deals-product-->           
+             <section class="Fashion-deals-container"> 
+                <h2 class="Fashion-title">__________Fashion Top Deals__________</h2>
 
+                <div class="fashion-product-container">
+                    <div class="fashion-deals-product">
+                    </div>
+                    
+                    <div class="fashion-deals-banner">
+                        <img src="images/Fashion Top Deals.png" alt="">
+                    </div>
+                </div>
+        
+
+
+             </section>
 
         <!-- Product items start form here -->
              <h2 class="just-for-you">Just For You</h2>
