--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-   
+
     <title>Online Shopping in World: Order Now from EcartMart.com</title>
 </head>
 <body>
@@ -170,7 +170,7 @@
                     </div>
                     
                     <div class="fashion-deals-banner">
-                        <img src="images/Fashion Top Deals.png" alt="">
+                        <img src="images/Fashion Top Deals banner.jpg" alt="">
                     </div>
                 </div>
         
