add footer section

--- a/checkout-page.html
+++ b/checkout-page.html
@@ -192,6 +192,7 @@
 
     <script type="module" src="script/checkout.js"></script>
     <script type="module" src="script/cart.js"></script>
+    <script src="script/footer.js"></script>
     <script src="https://kit.fontawesome.com/4bacff8f96.js" crossorigin="anonymous"></script>
 </body>
 </html>
