--- a/Product-preview.html
+++ b/Product-preview.html
@@ -212,7 +212,9 @@
         </div>
 
     </section>
-    <footer class="footer-container">footer</footer>
+    <footer class="footer-container">
+
+    </footer>
 
 
 </div>
@@ -220,6 +222,7 @@
 
 
     <script type="module" src="script/product-preview.js"></script>
+    <script src="script/footer.js"></script>
     <script src="https://kit.fontawesome.com/4bacff8f96.js" crossorigin="anonymous"></script>
 </body>
 </html>
