--- a/checkout-page.html
+++ b/checkout-page.html
@@ -64,11 +64,11 @@
          <div class="user-cart">
             <div class="cart-items">
                  
-                <div class="login-btn">
+                <a href="sign-in-page.html" class="login-btn">
                     <i class="fa-regular fa-user"></i>
                 <p>Account</p>
                 
-                </div>
+                </a>
 
                 <div class="cart-btn">
                     <a href="checkout-page.html" class="fa-solid fa-cart-shopping cart-icon"></a>
