--- a/sign-in-page.html
+++ b/sign-in-page.html
@@ -87,16 +87,19 @@
             
         </div>
 
-        <form  class="sign-in-form">
-            <h1>Sign In</h1>
+        
+        <div  class="sign-in-form">
+            <h1>Looks like you're new here!</h1>
+            <h3>Sign up with your mobile number to get started</h3>
             <input type="number" class="user-number" placeholder="Enter Mobile number" required>
+            <span id="number-error"></span>
             <p>By continuing, you agree to EcartMart's Terms of Use and Privacy Policy.</p>
             <button class="continue-btn">CONTINUE</button>
             <button class="login-user-btn">Existing User? Log In</button>
             <p class="sign-social">Or, sign up with</p>
             <button  href="" class="google-signIn"><img src="images/social-media-icons/google.png" alt="">Sign up using Google</button>
             <button  href="" class="facebook-signIn"><img src="images/social-media-icons/acebook logo_icon.png" alt="">Sign up using Facebook</button>
-        </form>
+        </div>
     </section>
 
     <footer class="footer-container">
@@ -105,6 +108,7 @@
 
     </div>
 
+    <script src="script/sign-in.js"> </script>
     <script src="script/footer.js"></script>
     <script src="https://kit.fontawesome.com/4bacff8f96.js" crossorigin="anonymous"></script>
 </body>
