added duplicate number filter

--- a/sign-in-page.html
+++ b/sign-in-page.html
@@ -93,7 +93,7 @@
             <h3>Sign up with your mobile number to get started</h3>
             <input type="number" class="user-number" placeholder="Enter Mobile number" required>
             <span id="number-error"></span>
-            <p>By continuing, you agree to EcartMart's Terms of Use and Privacy Policy.</p>
+            <p>By continuing, You agree to EcartMart's <a>Terms of Use</a> and <a>Privacy Policy</a></p>
             <button class="continue-btn">CONTINUE</button>
             <button class="login-user-btn">Existing User? Log In</button>
             <p class="sign-social">Or, sign up with</p>
